# how-to-fix-paypal

./: .gitignore  LICENSE.txt  README.md  grey-area-invoices.txt  invoices.txt  main.py  pyproject.toml  words.csv
bash/: run.sh
c/: obfuscated_way.c
fim/: paypal.fim
go/: go.mod  the_regex_way.go
invoices/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
java/: pom.xml
java/FixPaypalRegex/: pom.xml
java/Score_text/: Line.java  Score_text.java
javascript/: checkBeforeSendingEmail.js  scamGoBye.js
javascript/chatGPTed/: ItsTricky.js
javascript/userBad/: userbad.js
javascript/wrapped-messaged/: wrap-message.js
javascript/wrapped-messaged/messages/: wrapped-message-0.html  wrapped-message-1.html  wrapped-message-10.html  wrapped-message-11.html  wrapped-message-2.html  wrapped-message-3.html  wrapped-message-4.html  wrapped-message-5.html  wrapped-message-6.html  wrapped-message-7.html  wrapped-message-8.html  wrapped-message-9.html
lolcode/: TEH_RUNNR.py  TEH_SPAM_PURRTECTOR.lol
lua/: main.lua
php/: modular_filter.php
python/: check_usernames.py  compare_phone_numbers.py  data.py  filter_text.py  fuzzy_way.py  grammar.py  instructions.txt  predict_bad_text.py  requirements.txt  scammerNeutralizer.py  score_text.py  score_text_v2.py  score_text_v3.py  sus_words.txt  the_regex_way.py
python/annoyPayPalTillTheyFix/: annoyThem.py
python/output/: results.json
ruby/: basic.rb  init.rb  paypalSusMailFilter.rb  reader.rb
rust/sussy-wussy-meter/: Cargo.toml
swift/: invoiceScorer.swift
(+2 files in other folders)
